teste fix overflow

--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
   margin: 0;
   font-family: "Inter", sans-serif;
 }
+html{
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  
+}
 body{
    overflow: hidden;
 }
